--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
         <div id="shapes">
           <button id="drawCircle" class="btn drawShape"></button>
           <button id="drawRect" class="btn drawShape"></button>
-<!--          <button id="drawTriangle" class="btn drawShape"></button>-->
           <button id="drawTriangle" class="btn drawShape">
             <div id="TrBorder"></div>
             <div id="TrBody"></div>
@@ -43,6 +42,7 @@
         </div>
         <button id="clearBtn" class="btn btn-danger">X</button>
         <button id="undo" class="btn btn-primary">undo</button>
+        <button id="save" class="btn btn-success">save</button>
       </div>
 
       <div id="canvasContainer">
